<resources>
    <string name="app_name">IPETest</string>
    /** 실기 50문제 1 ~ 10 번 문제 **/
    <string name="practical50_001">1. 시스템 내의 클래스의 정적 구조를 표현하고 속성과 동작으로 구성되어 있는 다이어그램</string>
    <string name="practical50_002">2. 시스템의 동적 행위를 표현하고 객체 간 상호작용을 메시지 흐름으로 표현하는 다이어그램</string>
    <string name="practical50_003">3. 3계층 데이터 패킷을 발신지에서 목적지까지 전달하기 위해 최적의 경로를 지정하고 이경로를 따라 데이터 패킷을 다음 장치로 전달하는 네트워크 장비</string>
    <string name="practical50_004">4. 2계층 장비로서 동일 네트워크 내에서 출발지에 들어온 데이터 프로임을 뫽적지 MAC 주소 기반으로 빠르게 전달하는 네트워크 장비</string>
    <string name="practical50_005">5. 자바에서 데이터베이스를 사용할 수 있도록 연결해주는 응용 프로그램 인터페이스</string>
    <string name="practical50_006">6. 사용자와 시스템 사이에서 의사소통 할 수 있도록 고안된 물리적 가상의 매개체</string>
    <string name="practical50_007">7. 객체지향 소프트웨어 개발과정에서 산출물을 명세화 시각화 문서화 할 시 사용되는 모델링 기술과 방법론을 통해 만든 표준화된 범용 모델링 언어</string>
    <string name="practical50_008">8. 제품과 시스템 서비스 등을 사용자가 직/간접적으로 경험하면서 느끼고 생각하는 총체적 경험</string>
    <string name="practical50_009">9. 시나리오에 맞춰 제픔을 사용하여 질문에 답을 얻는 테스트</string>
    <string name="practical50_010">10. 이해 관계자들과의 화면구성을 협의하거나 서비스의 간략한 흐름을 공유하기 위해 화면 단위의 레이아웃을 설계하는 작업</string>

    /** 실기 50문제 11 ~ 20 번 문제 **/
    <string name="practical50_011">11. 정책 프로세스 콘텐츠 구성 와이어 프레임 기능 정의 데이터 베이스 연동 등 서비스 구축을 위한 모든 정보가 담겨 있는 설계 산출물</string>
    <string name="practical50_012">12. 정적인 화면으로 설계된 와이어 프레임 또는 스토리보드에 동적 효과를 적용함으로써 실제 구현 된 것처럼 시뮬레이션 할 수있는 모형</string>
    <string name="practical50_013">13. 시스템이 액터에게 제공해야 하는 기능으로 시스템 요구사항이자 사용자 입장에서 바라본 시스템의 기능</string>
    <string name="practical50_014">14. 모듈을 이용하여 소프트웨어의 성능을 향상시키거나 시스템의 디버깅,시험, 통합 및 수정을 용이하도록 하는 소프트웨어 설계 기법</string>
    <string name="practical50_015">15. 여러 가지 소프트웨어 구성요소와 그 구성요소가 가진 특성 중에서 외부에서 드러나는 특성 그릭 구성요소 간의 관계를 표현하는 시스템의 구조나 구조체</string>
    <string name="practical50_016">16. 고객의 요구사항을 정리해 놓은 시나리오를 4개의 관점에서 바라보는 소프트웨어적인 접근 방법</string>
    <string name="practical50_017">17. 서로 관련성이 많은 데이터와 이와 관련된 함수들을 한 묶음으로 처리하는 기법</string>
    <string name="practical50_018">18. 불필요한 부분을 생략하고 객체의 속성 중 가장 중요한 것에만 중점을 두어 개략화 모델화</string>
    <string name="practical50_019">19. 시스템이 제공하는 기능 서비스에 대한 요구사항</string>
    <string name="practical50_020">20. 시스템이 수행하는 기능 이외의 사항 시스템 구축에 대한 제약사항에 관한 요구사항</string>

    /** 실기 50문제 21 ~ 30 번 문제 **/
    <string name="practical50_021">21. 검토 자료를 회의 전에 배포해서 사전검토한 후 짦은 시간동안 회의를 진행하는 형태로 리뷰를 통해 오류를 검출하고 문서화</string>
    <string name="practical50_022">22. 소프트웨어 요구 설계 원시 코드 등의 저작자 외의 다른 전문가 또는 팀이 검사하여 오류를 찾아내는 공식적 검토 방법</string>
    <string name="practical50_023">23. 기업에서 운영하는 서로 다른 플랫폼 및 애플리케이션들 간 정보전달 연계 통합을 가능하게 해주는 솔루션</string>
    <string name="practical50_024">24. 기업에서 운영되는 서로 다른 플랫폼 및 애플리케이션 들을 하나의 시스템으로 통합 관리 할수 있도록 서비스 지향 중심의 통합을 지향하는 아키텍처</string>
    <string name="practical50_025">25. 인가받지 않은 사용자로부터 데이터를 보장하기 위해 DBMS가 가져야하는 특성이자 데이터베이스 시스템에서 하나의 논리적 기능을 정상적으로 수행하기 위한 작업의 기본 단위</string>
    <string name="practical50_026">26. 특정 테이블에 삽입 수정 삭제 등의 데이터 변경 이벤트가 발생 시 DBMS에서 자동적으로 실행되도록 구현된 프로그램</string>
    <string name="practical50_027">27. 프로그램의 로직을 이해하고 내부 구조화 동작을 검사하는 소프트웨어 테스트 방식, 소스 코드를 보면서 테스트 케이스를 다양하게 만들어 테스트를 수행하는 단위 모듈 테스트</string>
    <string name="practical50_028">28. 디지털 콘텐츠에 대한 권리 정보를 지정하고 암호화 기술을 이용하여 허가된 사용자의 허가된 권한 범위 내에서 콘텐츠의 이용이 가능하도록 통제하는 기술</string>
    <string name="practical50_029">29. 속도를 중점을 둔 분산형 버전 관리 시스템, Commit 동작은 로컬 저장소에서 이루어지고 PUSH 라는 동작으로 원격 저장소에 반영</string>
    <string name="practical50_030">30. 특정 요구사항에 준수하는지를 확인하기 위해 개발된 입력값 / 실행 조건 / 예상된 결과의 집합</string>

    /** 실기 50문제 31 ~ 40 번 문제 **/
    <string name="practical50_031">31. 테스트 수행을 위한 여러 테스트 케이스의 집합으로 테스트 케이스의 동작 순서를 기술한 문서</string>
    <string name="practical50_032">32. 20% 모듈에서 80 % 결함이 집중되어 발견되는 원리</string>
    <string name="practical50_033">33. 요구사항을 충족시켜주지 못한다면 결함이 없다고 해도 품질이 높다고 볼수 없는 원리</string>
    <string name="practical50_034">34. 모든 컴포넌트를 사전에 통합하여 전체 프로그램을 한꺼번에 테스트하는 방식</string>
    <string name="practical50_035">35. 모듈 및 모든 하위 컴포넌트를 대신하여 사용되는 더미 모듈</string>
    <string name="practical50_036">36. 상위의 모듈에서 데이터의 입력과 출력을 확인하기 위한 더미 모듈</string>
    <string name="practical50_037">37. 가독성이 높고 단순하며 의존성을 줄이고 중복을 최소화하여 깔끔하게 잘 정리된 코드</string>
    <string name="practical50_038">38. 단일한 접점의 허브 시스템을 통하여 데이터를 전송하는 중앙 집중식 방식</string>
    <string name="practical50_039">39. 애플리케이션 사이 미들웨어를 두어 연계하는 미들웨어 통합 방식</string>
    <string name="practical50_040">40. 특정 서비스를 변경하더라도 연결된 다른 서비스에는 영향을 주지 않는 유연한 구조</string>

    /** 실기 50문제 41 ~ 50 번 문제 **/
    <string name="practical50_041">41. 웹 서비스명, 제공위치, 프로토콜 정보 등 웹 서비스에 대한 상세 정보를 XML 형식으로 기술한 파일</string>
    <string name="practical50_042">42. 웹 서비스 정보인 WSDL을 등록하고 검색하기 위한 저장소</string>
    <string name="practical50_043">43. 사용자가 자신의 의지와는 무관하게 공격자가 의도한 행위를 특정 웹사이트에 요청하게 하는 공격기법</string>
    <string name="practical50_044">44. 오류를 제거하거나 수정한 시스템에서 오류 제거와 수정에 의해 새로이 유입된 오류가 없는지 확인하는 일종의 반복 테스트</string>
    <string name="practical50_045">45. 한 번의 시스템 인증을 통하여 여러 정보시스템에 재인증 절차 없이 접근할 수 있는 통합 로그인 기술</string>
    <string name="practical50_046">46. 전송 계층에 위치하면서 근거리 통신망이나 인트라넷, 인터넷에 연결된 컴퓨터에서 실행되는 프로그램 간에 일련의 옥텟을 안정적이고 순서대로, 에러없이 교환할 수 있게 해주는 프로토콜</string>
    <string name="practical50_047">47. 웹서버와 애플리케이션 서버 사이에서 연동을 가능하게 해주는 인터페이스 역할을 해주는 서버</string>
    <string name="practical50_048">48. 보안의 3요소</string>
    <string name="practical50_049">49. ( 1 ) 은 개발자의 시각에서 제품의 생산 과정을 테스트하는 것으로, 제품이 명세서대로 완성됐는지 테스트 하는 것이고, ( 2 )은 사용자의 시각에서 생산된 제품의 결과를 테스트하는 것으로, 사용자가 요구한대로 제품이 완성됐는지 정상적으로 동작하는지를 테스트 하는 것</string>
    <string name="practical50_050">50. 분산 컴퓨팅 환경에서 응용 프로그램과 프로그램이 운영되는 환경 간에 원만한 통신이 이루어질 수 있도록 제어해주는 소프트웨어로 운영체제와 소프트웨어 애플리케이션 사이에 위치하는 프로그램</string>


    /** 실기 100문제 1 ~ 10 번 문제 */
    <string name="practical100_01">1. 테스트 목적에 따른 분류 중 하나로 ‘변경된 시스템과 기존 시스템에 동일한 데이터를 입력 후 결과를 비교하는 테스트 기법</string>
    <string name="practical100_02">2. TCP 신뢰성 기반의 연결을 이용한 공격 방법으로, 통신 내용을 엿보거나 세션을 가로채어 정상적인 인증 과정을 무시하고, 불법으로 시스템에 접근할 수 있는 공격</string>
    <string name="practical100_03">3. 애플리케이션을 만들기 위한 하위 함수, 프로토콜, 도구들의 집합으로 명확하게 정의된 다양한 컴포넌트 간의 통신 방법</string>
    <string name="practical100_04">4. 공중 네트워크를 통해 한 회사나 몇몇 단체가 내용을 바깥 사람에게 드러내지 않고 통신할 목적으로 쓰이는 사설 통신망, 인터넷망과 같은 공중망을 사설망 처럼 이용해 회선비용을 크게 절감할 수 있는 기업통신 서비스</string>
    <string name="practical100_05">5. 다중 프로세싱 환경에서 두 개 이상의 프로세스가 특정 자원 할당을 무한정 대기하는 상태</string>
    <string name="practical100_06">6. 데이터의 중복성으로 인해 릴레이션을 조작할 때 발생하는 비합리적인 현상</string>
    <string name="practical100_07">7. 외부 사용자 명세를 보면서 수행하는 테스트</string>
    <string name="practical100_08">8. 공격자가 게시판에 악성 스크립트를 작성하여 삽입하고, 사용자가 그것을 보았을 때 이벤트가 발생하여, 사용자의 쿠키정보, 기타 정보를 특정사이트로 전송하거나 정보를 탈취하는 공격기법</string>
    <string name="practical100_09">9. 패킷 교환 네트워크상에서 데이터를 교환하기 위한 32bit 주소체계를 갖는 네트워크 계층의 프로토콜</string>
    <string name="practical100_10">10. 업무 분석 결과로 도출된 실체와 엔티티 간의 관계를 도식화한 다이어그램</string>


    /** 실기 100문제 11 ~ 20 번 문제 */
    <string name="practical100_11">11. 현실 세계에 존재하는 데이터와 그들 간의 관계를 사람이 이해할 수 있는 형태로 명확하게 표현하기 위해서 가장 널리 사용되고 있는 모델</string>
    <string name="practical100_12">12. 데이터가 각 프로세스를 따라 흐르면서 변환되는 모습을 나타내는 흐름도</string>
    <string name="practical100_13">13. 개발 일정 지연된다고 개발자 신규투입 하면 더 지연되는 법칙</string>
    <string name="practical100_14">14. 3차 정규형 만족 + 모든 결정자가 후보키 되게 하여 결정자 함수 종속성 제거</string>
    <string name="practical100_15">15. 비정상적 트래픽 능동적으로 차단하고 격리하는 시스템</string>
    <string name="practical100_16">16. HTTP URI를 통해 자원을 명시하고, HTTP 메소드(POST, GET, PUT, DELETE)를 통해 해당 자원에 대한 생성, 조회, 갱신, 삭제 등의 명령을 적용하는 기술</string>
    <string name="practical100_17">17. 설계 및 구현 단계에서 해킹 등의 공격을 유발할 가능성이 있는 잠재적인 보안 취약점을 사전에 제거하고, 외부 공격으로부터 안전한 소프트웨어를 개발하는 기법</string>
    <string name="practical100_18">18. 기존 DBMS 능력을 넘어서는 대량의 정형, 비정형 데이터로부터 가치를 추출하고 결과를 분석하는 기술</string>
    <string name="practical100_19">19. 한 릴레이션의 기본키를 구성하는 어떠한 속성 값도 널(NULL) 값이나 중복값을 가질 수 없음을 의미하는 규정 </string>
    <string name="practical100_20">20. 데이터베이스에 존재하는 테이블의 관계에서 참조 무결성을 보장하기 위해 사용되며, 중복되는 값을 가질 수 있으며 비어있는 값(Null 값) 또한 가질 수 있는 키</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>