<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".practical.problem50.Practical50_02">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_006"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/answer06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="정답"
            android:inputType="textPersonName"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_007"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/answer07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="정답"
            android:inputType="textPersonName"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text08"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_008"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/answer08"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="정답"
            android:inputType="textPersonName"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text09"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_009"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/answer09"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="정답"
            android:inputType="textPersonName"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_010"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/answer10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="정답"
            android:inputType="textPersonName"
            android:textColor="#005766" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="이전"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#BDBDBD"
            android:textColor="#000000"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="다음"
            android:layout_marginRight="10dp"
            android:backgroundTint="#BDBDBD"
            android:textColor="#000000"/>
    </LinearLayout>

</LinearLayout>