<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".practical.problem50.Practical50_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_046"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_047"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_048"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_049"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_050"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="이전"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#BDBDBD"
            android:textColor="#000000"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="확인"
            android:layout_marginRight="10dp"
            android:backgroundTint="#BDBDBD"
            android:textColor="#000000"/>
    </LinearLayout>

</LinearLayout>