<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".practical.problem50.Practical50_04">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_016"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_017"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_018"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_019"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_020"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="이전"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#BDBDBD"
            android:textColor="#000000"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="다음"
            android:layout_marginRight="10dp"
            android:backgroundTint="#BDBDBD"
            android:textColor="#000000"/>
    </LinearLayout>
</LinearLayout>