<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".practical.problem50.Practical50_05">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_021"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_022"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_023"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_024"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

        <TextView
            android:id="@+id/text25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical50_025"
            android:textColor="#000000"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/error25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="오답"
            android:textColor="#ff0000"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/answer25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="정답"
            android:textColor="#005766" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="이전"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#BDBDBD"
            android:textColor="#000000"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="다음"
            android:layout_marginRight="10dp"
            android:backgroundTint="#BDBDBD"
            android:textColor="#000000"/>
    </LinearLayout>

</LinearLayout>